--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
+        "mews/captcha": "^3.4",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
