--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "mews/captcha": "^3.4",
+        "mpdf/mpdf": "^8.2",
+        "phpoffice/phpspreadsheet": "^5.3",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
